serverless-code/traffic/ingress-controller/ingress-obj.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: hello.test.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hello-world-00001
              port:
                number: 80
